--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,12 @@
+.container{
+  height: 200px;
+}
 
 [class*="col-"]{
   background-color:#FEC0CB ;
   border: 1px solid #000000;
-  line-height: 200px;
-  height: 200px;
-  text-align: center
-}
-
-.relative{
+  height: 100%;
+  text-align: center;
   position: relative;
 }
 
@@ -17,7 +16,7 @@
   height: 100%;
 }
 
-.col-6>.container{
+[class*="col-"] > .container{
   height:100%;
   padding: 5px;
 }
@@ -27,7 +26,6 @@ span{
   top :50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  line-height: 20px;
 } 
 
 
